--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,4 +1,4 @@
-@import url("bootstrap-5.3.3-dist/css/bootstrap.min.css");
+@import url("../bootstrap-5.3.3-dist/css/bootstrap.min.css");
 
 body {
     color: #333;
